--- a/_posts/2021-03-29-Blog_To_do.md
+++ b/_posts/2021-03-29-Blog_To_do.md
@@ -14,8 +14,11 @@ last_modified_at: 2021-03-29
 ---
 
 # 1
+## 1
 모바일 home 화면에서 블로그 이름 크게 하고
 toc버튼 만들어서 나머지 카테고리 보이도록
+## 2
+PC화면에서 왼쪽에 Sidebar 만들기
 
 # 2
 PC화면에서 왼쪽에 Sidebar 만들기
