--- a/_posts/2021-03-25-Projects2.md
+++ b/_posts/2021-03-25-Projects2.md
@@ -1,10 +1,10 @@
 ---
-title:  "Programmers projects22" 
+title:  "[C++] Programmers projects22" 
 
 categories:
   - Projects
 tags:
-  - [Projects]
+  - [Projects, C++]
 
 toc: true
 toc_sticky: true
