--- a/_posts/2021-03-25-projects.md
+++ b/_posts/2021-03-25-projects.md
@@ -1,10 +1,10 @@
 ---
-title:  "Programmers projects" 
+title:  "[C++] Programmers projects" 
 
 categories:
   - Projects
 tags:
-  - [Projects]
+  - [Projects, C++]
 
 toc: true
 toc_sticky: true
