--- a/_posts/2021-03-29-Blog_To_do.md
+++ b/_posts/2021-03-29-Blog_To_do.md
@@ -20,7 +20,7 @@ last_modified_at: 2021-03-29
 PC화면에서 왼쪽에 Sidebar 만들기
 
 # 3. 
-Recent posts 글 간격 사이 줄이기
+Recent Posts 글 간격 사이 줄이기
 
 # 4. 
 카테고리와 프로젝트 클릭시 보여지는 categories항목 font 크기 키우기
