--- a/_posts/2021-03-29-Blog_To_do.md
+++ b/_posts/2021-03-29-Blog_To_do.md
@@ -15,19 +15,25 @@ last_modified_at: 2021-03-29
 
 # 1. 
 모바일 home 화면에서 블로그 이름 크게 하고 toc버튼 만들어서 나머지 카테고리 보이도록
+<span style="color:red; font-family: 'Jeju Myeongjo', serif;">50% 완료</span>
 
 # 2. 
 PC화면에서 왼쪽에 Sidebar 만들기
 
 # 3. 
 Recent Posts 글 간격 사이 줄이기
+<span style="color:red; font-family: 'Jeju Myeongjo', serif;">완료</span>
 
 # 4. 
 카테고리와 프로젝트 클릭시 보여지는 categories항목 font 크기 키우기
+<span style="color:red; font-family: 'Jeju Myeongjo', serif;">완료</span>
 
 # 5. 
 post화면에서 Previous 버튼과 Next 버튼에 해당하는 post의 제목 보여주기
 
 # 6. 
 post화면에서 제일 하단 부분, 아마도 최신 게시물인것 같은데 3과 마찬가지로 간격 줄이기
+<span style="color:red; font-family: 'Jeju Myeongjo', serif;">완료</span>
+<!-- 이런 방식으로 html로 글자 변경이나 기타 변경이 가능한듯 -->
+
 <br>
