약수의 개수와 덧셈

--- a/_posts/2022-05-24-로또의 최고 순위와 최저 순위.md
+++ b/_posts/2022-05-24-로또의 최고 순위와 최저 순위.md
@@ -20,7 +20,7 @@ last_modified_at: (2022-05-23)
 github나 개인블로그에 올리지 말라고 되어 있어서 링크로 대체합니다.
 
 출처: Programmers <br>
-[로또의 최고 순위와 최저 순위](https://programmers.co.kr/learn/courses/30/lessons/77484)){:target="_blank"}  
+[로또의 최고 순위와 최저 순위](https://programmers.co.kr/learn/courses/30/lessons/77484){:target="_blank"}  
 
 
 
