--- a/_posts/2022-05-28-소수 만들기.md
+++ b/_posts/2022-05-28-소수 만들기.md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2022-05-28
-last_modified_at: 2022-05-29
+last_modified_at: 2022-05-28
 ---
 
 
@@ -108,7 +108,7 @@ function solution(nums) {
 
 ```js
 const MAXPRIME = 3000;  //주어진 조건에 따른 최대 소수값
-const MPSQUAREROOT = Math.sqrt(MAXPRIME);   //최대 소수의 제곱근
+const MPSQUAREROOT = parseInt(Math.sqrt(MAXPRIME));   //최대 소수의 제곱근
 
 function solution(nums) { 
     var answer = 0;
@@ -121,8 +121,10 @@ function solution(nums) {
     }
 
     //3000까지 1로 채운 배열에서 값 1은 소수고 0은 소수가 아니게 만들기 위한 반복문
-    for(let i = 2; i < MPSQUAREROOT; i++){
+    for(let i = 2; i <= MPSQUAREROOT; i++){
         var j = 2;
+
+        //현재 주어진 숫자가 이미 소수가 아니라고 판명됐으면 continue
         if(primeNumberArr[i - 1] == 0){ 
             continue;
         }
@@ -148,6 +150,11 @@ function solution(nums) {
     return answer;
 }
 ```
+
+ps. 다음 문제가 소수 찾기 였는데 이 문제의 코드를 가져가서 풀어보니 하나의 문제가 발생했다.
+for(let i = 2; i < MPSQUAREROOT; i++){} 이 반복문에서 MPSQUAREROOT이 값보다 작다라는 조건인데 정확한 값을 얻기 위해서는 작거나 같다로 해야한다.
+이유는 소수는 정수만있어서 parseInt로 소수점 부분을 버리고 정수 부분만 취했을 때 해당 정수 또한 소수일 수 있는데 조건을 작다로 하면 해당 소수는 검사를 하지 않기 때문이다.
+(현재는 수정함.)
 
 <br>
 
