애매한 표현 수정

--- a/_posts/2022-06-15-ACM Craft.md
+++ b/_posts/2022-06-15-ACM Craft.md
@@ -166,7 +166,7 @@ public class Num_1005_origin {
 //내 코드 11
 ```
 
-- 아래 반례는 조건을 주면 풀 수 있을 것 같은데 위 반례는 아무리 생각해도 방법이 떠오르지 않았다.
+- 아래쪽 반례는 조건을 주면 풀 수 있을 것 같은데 위 반례는 아무리 생각해도 방법이 떠오르지 않았다.
 - 그래서 이 풀이는 남겨두고 처음에 풀었던 DFS에 DP를 사용해서 풀어보자고 생각했다.
 
 
