왜 업로드가 안되냐!!

--- a/_posts/2022-07-27-게시판 페이징 구현.md
+++ b/_posts/2022-07-27-게시판 페이징 구현.md
@@ -43,10 +43,23 @@ last_modified_at: 2022-07-28
 ## 만들어보고 싶었던 페이징
 - 위에서 배운 페이징도 좋지만 그걸 배우고 나니, 내가 생각했던 것을 만들고 싶어졌다. 그래서 만들어봤다.
 
+## 5개씩 페이징
+
+### 1페이지 -> 1부터 5까지 보여야하고
+
 ![1](https://user-images.githubusercontent.com/25880465/181293374-359789a0-eb34-4047-82aa-48aa7692ef57.png)
-![3](https://user-images.githubusercontent.com/25880465/181293372-06fd1e17-3a91-472a-aa45-0d9f394bcf48.png)
+
+### 7페이지 -> 5부터 9까지 보여야하고
+
 ![7](https://user-images.githubusercontent.com/25880465/181293378-a825e9b8-e9e6-4965-ab61-c9bf6f4a2508.png)
+
+### 9페이지 -> 5부터 9까지 보여야하고
+
 ![9](https://user-images.githubusercontent.com/25880465/181293382-810cd320-abca-437d-a290-a42592a671eb.png)
+
+### 총 페이지가 3개일때는 3개만 보여야 된다.
+
+![3](https://user-images.githubusercontent.com/25880465/181293372-06fd1e17-3a91-472a-aa45-0d9f394bcf48.png)
 
 
 ## 느낀점
