--- a/_posts/2022-08-22-aws elb 서버 올리기.md
+++ b/_posts/2022-08-22-aws elb 서버 올리기.md
@@ -114,7 +114,7 @@ last_modified_at: 2022-08-23
 
 # 마무리
  - 서버를 올려야겠다고 생각한 가장 큰 계기는 wordle게임을 만들어서 매일매일 단어를 서버에서 받아오게 하자! 였었다.
- - wordle게임의 실제 주소는 github page로 하고 server는 aws로 하기로 했다. 그래도 나름 유튜브를 열심히 봐서 sop와 cors에는 당황하지 않았다.
+ - wordle게임의 실제 실행은 github page로 하고 server는 aws로 하기로 했다. 그래도 나름 유튜브를 열심히 봐서 sop와 cors에는 당황하지 않았다.
  - 근데 생각지도 못한 mix content?? 라는 오류가 나타났다. 이유는 바로 http와 https간의 통신을 막는 크롬의 기능이었다.
  - 내가 내 집에서 내 컴퓨터만 가지고 접속한다면 그냥 해당 기능을 꺼버리면 됐는데 맨 처음 말했듯 어디서든 접속이 가능하게 하고 싶었고 그게 서버니까!
  - 그래서 거의 1주일 동안 틈나는대로 어떻게 해야 서버를 올리고, https를 적용하고 하는 것을 찾아서 겨우겨우 해냈다.
