--- a/_posts/2022-08-29-객체지향의 5원칙 SOLID.md
+++ b/_posts/2022-08-29-객체지향의 5원칙 SOLID.md
@@ -29,31 +29,9 @@ last_modified_at: 2022-08-29
 ## LSP 리스코프 치환 원칙 (Liskov substitution principle)
  - “프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 한다.” 계약에 의한 설계를 참고하라.
 ## ISP 인터페이스 분리 원칙 (Interface segregation principle)
- - “특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다.”[4]
+ - “특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다.”
 ## DIP 의존관계 역전 원칙 (Dependency inversion principle)
- - 프로그래머는 “추상화에 의존해야지, 구체화에 의존하면 안된다.”[4] 의존성 주입은 이 원칙을 따르는 방법 중 하나다.
-
-
-///좀 더 이해해서 더 적자
-
-
-## 문제의 이해
-
-
-
-
-
-### 내가 생각한 풀이 방법
-
-
-## 풀이
-### 첫 번째 풀이
-
-
-```언어
-
-```
-
+ - 프로그래머는 “추상화에 의존해야지, 구체화에 의존하면 안된다.” 의존성 주입은 이 원칙을 따르는 방법 중 하나다.
 
 
 
