Revert "Update 2022-09-13-스프링은 객체 컨테이너다.(Feat. 의존성 주입).md"
This reverts commit 8173e1457d8da27cdfffa440ec343d655805ddf5.

--- a/_posts/2022-09-13-스프링은 객체 컨테이너다.(Feat. 의존성 주입).md
+++ b/_posts/2022-09-13-스프링은 객체 컨테이너다.(Feat. 의존성 주입).md
@@ -182,7 +182,7 @@ private MemberRegisterService memberRegisterService = new MemberRegisterService(
 private ChangePasswordService changePasswordService = new ChangePasswordService(memberDao);
 ```
 - new로 생성하는 것과 동일하게 만약 ChangePasswordService에 추가로 ChangeIdService, SearchNameService ... 계속해서 필요한 클래스가 생긴다고해도
-- 우리가 변경할 부분은 딱 한곳, <span style="color:red">``` = new CachedMemberDao(); ```</span> 이 부분만 변경해주면 10개든 100개든 클래스가 더 생겨도 상관이 없다.
+- 우리가 변경할 부분은 딱 한곳, ``` = new CachedMemberDao(); ``` 이 부분만 변경해주면 10개든 100개든 클래스가 더 생겨도 상관이 없다.
 - 이게 바로 new로 직접생성보다는 의존성 주입을 통해서 생성하는 좋은 부분 중에 하나다. 앞으로 더 나오겠지만 아직 수정해야할 부분은 더 있다.
 - 위에서 말했던 memberDao의 insert메서드가 수정됐을때, 현재의 방법으로는 해결 할 수 가 없었다.
 - 이 방법은 다음 포스팅으로 해보자.
