docs: try catch문을 코드 여러곳에서 사용하는 이유 포스팅

--- a/_posts/2022-09-15-try catch문을 코드 여러곳에서 사용하는 이유.md
+++ b/_posts/2022-09-15-try catch문을 코드 여러곳에서 사용하는 이유.md
@@ -94,7 +94,7 @@ class Playground {
 - 예외발생 지점은 동일하게 method2이고, main 메서드에서 핸들링을 하려고 한다. 다만 이 코드도 바로 위의 1번 코드와 동일하게 예외가 발생함과 동시에 죽는다.
 - main메서드에서 try catch문으로 예외처리를 하고 있는 것처럼 보이지만 발생하는 예외를 감싼 try catch문도 없고 예외가 발생한 메서드를 호출한 함수에게 예외를 전달하는 throws 문도 없기 때문이다.
 
-- 여기서 알 수 있는 것은 <span style="color:red;">예외가 발생하면 해당 예외를 감싸고 있는 try catch문에서 처리를 하거나 예외가 발생한 메서드를 호출한 메서드에게 예외를 반드시 전달</span>해야 한다는 것이다.
+- 여기서 알 수 있는 것은 <span style="color:red;">예외가 발생하면 해당 예외를 감싸고 있는 try catch문에서 처리를 하거나 예외가 발생한 메서드에서 호출한 메서드에게 예외를 반드시 전달</span>해야 한다는 것이다.
 - 그렇지 않으면 프로그램은 그대로 죽는다.
 
 ### 3
