docs: 자바스크립트의 일급함수를 이용해서 더 좋은 코드를 작성해보자.

--- a/_posts/2022-09-14-SOLID원칙 S와 컴포넌트 개념.md
+++ b/_posts/2022-09-14-SOLID원칙 S와 컴포넌트 개념.md
@@ -16,7 +16,7 @@ last_modified_at: 2022-09-14
 ---
 
 
-# 스프링을 배우다가 아주 사소한 코드를 보면서 이게 Single responsibility principle 원칙을 문득 떠올렸다.
+# 스프링을 배우다가 아주 사소한 코드를 보면서 이게 Single Responsibility Principle 원칙을 문득 떠올렸다.
 ```java
 class MemberDao
 ```
